# wobble

./: CMakeLists.txt  LICENSE  README  README.md  copypaste  meson.build  run-test
wobble/: CMakeLists.txt  meson.build  string-test.cc  string-tut.cc  string.cc  string.h  subprocess-test.cc  subprocess.cc  subprocess.h  sys-test.cc  sys.cc  sys.h  term.cc  term.h  testrunner.cc  testrunner.h  tests-main.cc  tests-test.cc  tests-tut.cc  tests.cc  tests.h
